# FileWatcher

./: .gitignore  CMakeLists.txt  README.md
src/: acceptor_impl.cpp  acceptor_impl.h  event.h  linux_loop.cpp  linux_loop.h  listener_impl.h  loop_impl.h  mac_acceptor.cpp  mac_acceptor.h  mac_listener.cpp  mac_listener.h  mac_loop.cpp  mac_loop.h  main.cpp
